test my code in course and add image to repo and HTML for livraison5/carousel

--- a/css/components/_carousel.scss
+++ b/css/components/_carousel.scss
@@ -3,10 +3,11 @@ body {
 }
 
 img {
-    display: none;
+ display: none;
 }
 
-.active {;
-    display : block;
+.active {
+    display: block;
 }
+
 
