complete js code into script.js and css into components/_carousel.scss

--- a/css/components/_carousel.scss
+++ b/css/components/_carousel.scss
@@ -2,12 +2,14 @@ body {
     background-color: aquamarine;
 }
 
-img {
- display: none;
+li {
+display: none;
 }
 
 .active {
     display: block;
 }
 
-
+img {
+    width: 50vw;
+}
